# PROJET_PACKAGE_SUPPLYCHAIN

./: .gitignore  README.md  analyse_origine_piece.py  font_space_grotesk.txt  main.py  pyproject.toml
notebooks/: analyse retour good.py  analyse retour prod sans rep.py  analyse_article_sans_sortie.py  analyse_evitement_achat.py  analyse_panne_sur_stock.py  identifier_art_prod_repare.py  notebook_marimo.py  traitement_litiges.py
package_supply_chain/: api_address_gps.py  bt.py  constants.py  copy_excel_files.py  create_database_application.py  create_database_gps_adresse.py  create_database_photo.py  excel_csv_to_dataframe.py  helios.py  import_to_db_functions.py  items.py  minmax.py  miscellaneous_functions.py  models.py  my_loguru.py  photo_processing.py  referential_stores.py  stock.py  stock_movement.py
package_supply_chain/api/: api_analyze_m_to_d.py  api_buildings.py  api_inter_prod_conso_output_stat.py  api_items_to_back_to_stock_d.py  api_items_to_check_after_return_from_prod.py  api_items_with_return_good.py  api_items_without_exit.py  api_mvt.py  api_origin_items.py  api_priority_list_photo.py  api_stock.py  api_stock_histo.py  api_stores.py
package_supply_chain/backup_addresses/: backup_addresses.parquet
package_supply_chain/tests/: test_api_buildings.py  test_api_get_items_with_return_good.py  test_api_get_list_items_m_to_d.py  test_api_inter_output_statistics.py  test_api_items.py  test_api_items_without_exit.py  test_api_mvt.py  test_api_priority_list_photo.py  test_api_stock.py  test_api_stock_histo.py  test_stock_histo.py
